--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -9,5 +9,6 @@
     <div id="container">
     </div>
     <script src="js/compiled/minesweeper.js" type="text/javascript"></script>
+    <script src="js/analytics.js" type="text/javascript"></script>
   </body>
 </html>
